Projeto/Compilador/tests/cases/error/T7.pas
program T7;
var
  v: array[1..3] of integer;
begin
  v := 3;
end.
